# macmon

./: .gitignore  ISSUES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: session-log.md
docs/backlog/: active.md  full.md  parked.md
macmon/: actions.py  cli.py  metrics.py  notifications.py  server.py
macmon/static/: index.html
