[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macmon"
version = "1.1.1"
description = "Real-time Mac system monitoring dashboard with smart optimization recommendations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["macos", "monitoring", "dashboard", "performance", "system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psutil>=5.9.0",
    "websockets>=12.0",
]

[project.scripts]
macmon = "macmon.cli:main"

[project.urls]
Homepage = "https://github.com/jagangirisaballa/macmon"
Repository = "https://github.com/jagangirisaballa/macmon"
Issues = "https://github.com/jagangirisaballa/macmon/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["macmon*"]

[tool.setuptools.package-data]
macmon = ["static/*"]
